correct code and adjust overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
-@import '@fortawesome/fontawesome-free/css/all.css';
+@import "@fortawesome/fontawesome-free/css/all.css";
 
 * {
   margin: 0;
@@ -26,14 +26,12 @@ body {
 .main::before {
   content: "";
   background-image: url("./assets/bg.jpg");
-  background-size: cover;
   position: absolute;
   z-index: -1;
   filter: brightness(0.38);
   height: 100%;
-  width: 100%;
-  object-fit: cover;
-  transform: scale(1.25) translateY(-23.2%);
+  width: 100vw;
+  transform: scale(1) translateY(-17.2%);
 }
 
 /* ------------------------- NAVBAR --------------------------- */
@@ -101,18 +99,15 @@ body {
 }
 
 .main-heading {
-  
   font-size: 2.7rem;
   text-align: center;
 }
 
 .main-content h2 {
-  
   font-weight: 300;
   text-align: center;
 }
 h4 {
-  
   font-size: larger;
   margin-bottom: 1rem;
   font-weight: 300;
@@ -175,7 +170,7 @@ h4 {
   justify-content: center;
 }
 
-.desc h2{
+.desc h2 {
   font-size: 1rem;
   font-weight: 200;
 }
@@ -204,7 +199,8 @@ h4 {
   position: relative;
   z-index: 1;
 }
-.feacher-Img .third {
+
+  .feacher-Img .third { 
   z-index: -1;
   overflow: hidden;
   width: 100%;
@@ -214,11 +210,13 @@ h4 {
   position: absolute;
   top: 34%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  /* Added prefixes for cross-browser compatibility */
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
 }
+
 
 /* ------------------------- Frequently --------------------------- */
 
@@ -229,7 +227,7 @@ h4 {
   padding: 3rem 0;
 }
 
-.faq h2{
+.faq h2 {
   font-weight: 300;
 }
 .faq-box i {
@@ -310,7 +308,6 @@ h4 {
     width: 90vw;
   }
 }
-
 @media screen and (max-width: 1077px) {
   .main-heading {
     font-size: 2.4rem;
@@ -356,7 +353,7 @@ h4 {
   }
 }
 @media screen and (max-width: 494px) {
-  .nav .logo{
+  .nav .logo {
     width: 100px;
   }
   .nav .eng-btn {
